--- a/package.json
+++ b/package.json
@@ -1,22 +1,15 @@
 {
-  "name": "electron-quick-start",
-  "version": "1.0.0",
-  "description": "A minimal Electron application",
-  "main": "main.js",
-  "scripts": {
-    "start": "electron ."
-  },
-  "repository": "https://github.com/electron/electron-quick-start",
-  "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo"
-  ],
-  "author": "GitHub",
-  "license": "CC0-1.0",
-  "devDependencies": {
-    "electron": "^7.1.4"
-  }
+    "name": "tokentools",
+    "version": "1.0.0",
+    "description": "A discord raid application",
+    "main": "main.js",
+    "scripts": {
+        "start": "electron ."
+    },
+    "keywords": [],
+    "author": "CodingDotExe",
+    "license": "ISC",
+    "devDependencies": {
+        "electron": "^7.1.4"
+    }
 }
