--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
     "license": "ISC",
     "devDependencies": {
         "electron": "^7.1.4"
+    },
+    "dependencies": {
+        "discord": "^0.8.2",
+        "npm": "^6.13.3"
     }
 }
